# basic-ray-tracer

./: Cargo.toml  README.md
src/: camera.rs  hittable.rs  main.rs  ray.rs  renderer.rs  scene.rs  types.rs
src/object/: sphere.rs
src/primitive/: mod.rs  sphere.rs
src/utils/: default.rs
