[package]
name = "basic-ray-tracer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "^0.21"
png = "^0.17"
rand = "0.8.5"
rayon = "1.7.0"
# env_logger = "^0.9"
# winit = "^0.26"
# winit_input_helper = "^0.12"

[profile.release]
lto = "fat"
opt-level = "s"
